# rtfm

./: .gitignore  .gitmodules  README.md  pyproject.toml
sandbox/notebooks/: dlpc900-serial-cmd-interpreter.ipynb  dlpc900-serial-sim-agent.ipynb  dspy-test.ipynb  llama-agent-test.ipynb  llama-code-test.ipynb  llama-index-starter-tutorial.ipynb  llama-parse-test.ipynb  serial-sim-agent.ipynb
sandbox/notebooks/storage/: default__vector_store.json  docstore.json  index_store.json
