[project]
name = "rtfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.11.3",
    "ipykernel>=6.29.5",
    "llama-index-tools-code-interpreter>=0.2.0",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
