[project]
name = "rtfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.11.3",
    "ipykernel>=6.29.5",
    "llama-index-tools-code-interpreter>=0.2.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
    "nest-asyncio>=1.6.0",
    "llama-index-llms-anthropic>=0.3.0",
    "pyusb>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
